# vulnerable-app

./: .env.dist  .gitignore  Dockerfile  README.md  app.py  db.py  pyproject.toml  routes.py  schema.sql  users.py
static/: style.css
templates/: del.html  error.html  index.html  layout.html  newpost.html  post.html  register.html  results.html  search.html
