[tool.poetry]
name = "vulnerable-app"
version = "0.1.0"
description = "Intentionally vulnerable web app for University of Helsinki cybersecurity course."
authors = ["jobatabs <2370315+jobatabs@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
gunicorn = "^23.0.0"
requests = "^2.32.4"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.2.1"
psycopg2 = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
